[package]
name = "halfpipe"
version = "0.1.0"
edition = "2021"

default-run = "halfpipe"

[dependencies]
# TEST SERVER
tun = { version = "0.7", optional = true }
quinn = { version = "0.11" }
rustls = { version = "0.23", features = ["ring"] }
rcgen = { version = "0.13", optional = true }
tokio = { version = "1.41", optional = true }

[[bin]]
name = "server"
path = "src/server.rs"
required-features = ["server"]

[features]
server = ["tun/tokio", "rcgen", "tokio/full"]
